2015-09-14  Chris Dumez  <cdumez@apple.com>

        Disable PICTURE_SIZES on AppleWin
        https://bugs.webkit.org/show_bug.cgi?id=149125

        Reviewed by Alexey Proskuryakov.

        * win/tools/vsprops/FeatureDefines.props:

2015-08-31  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed build fix.

        * win/lib32/WebKitSystemInterface.lib: Update with VS2015 build of this
        library to avoid linker errors on build bots.

2015-08-21  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed build fix.

        * win/tools/vsprops/common.props: Ignore a warning that is filling the
        build logs with useless cruft.

2015-08-20  Lucas Forschler  <lforschler@apple.com>

        Check in LLVM 3.6.2 binary drops for OS X Mavericks.
        Check in drops built from the LLVM 3.6.2 open source release. 

        * LLVMIncludesMavericks.tar.bz2:
        * LLVMLibrariesMavericks.tar.bz2:

2015-08-12  Lucas Forschler  <lforschler@apple.com>

        Check in LLVM 3.6.2 binary drops for OS X Yosemite
        Check in drops built from the LLVM 3.6.2 open source release.

2015-08-11  Brent Fulgham  <bfulgham@apple.com>

        [Win] Unreviewed build fix for VS2015 targets.

        * win/lib32/WebKitSystemInterface.lib: Update with VS2015 version of library.

2015-08-04  Alex Christensen  <achristensen@webkit.org>

        Fix quirks with CMake and VS2015
        https://bugs.webkit.org/show_bug.cgi?id=147663

        Reviewed by Brent Fulgham.

        * win/tools/vsprops/common.props:
        Hide some warnings.  Using the same variable names in nested scopes is ok for now.

2015-08-04  Brent Fulgham  <bfulgham@apple.com>

        [Win] Update Apple Windows build for VS2015
        https://bugs.webkit.org/show_bug.cgi?id=147653

        Reviewed by Dean Jackson.

        * win/tools/vsprops/common.props: Fix build flags to use Windows 7
        (WINVER=0x601) as minimum build target for 64-bit builds.
